# oop-labs-3semestr

./: .~lock.Методические_указания_Лабораторные_работы_ООП_2025_ред.odt#  README.md  Методические_указания_Лабораторные_работы_ООП_2025_ред.odt
lr3_circles/: Makefile  ccircle.cpp  ccircle.h  lr3_circles  lr3_circles.pro  main.cpp  mainwindow.cpp  mainwindow.h  mystorage.cpp  mystorage.h
oop_lab1/: 1 лаба.odt  Makefile  README.md  aboutwindow.cpp  mainwindow.cpp  mainwindow.h  moc_aboutwindow.cpp  moc_mainwindow.cpp  oop_lab1  oop_lab1.pro
oop_lab2/: 2 лаба.odt  README.md  circle.cpp  circle.h  lab2  main  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h
oop_lab3/: 3 лаба.odt  README.md
oop_lab4/: .~lock.4 лаба.odt#  4 лаба.odt  Makefile  README.md  baseshape.cpp  baseshape.h  circle.cpp  circle.h  lab4  line.cpp  line.h  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  moc_shapewidget.cpp  rectangle.cpp  rectangle.h  shapestorage.cpp  shapestorage.h  shapewidget.cpp  shapewidget.h  triangle.cpp  triangle.h
oop_lab5/: .~lock.5 лаба.odt#  5 лаба.odt  CMakeLists.txt  README.md  class.cpp  class.h  lab5  main.cpp  task3.cpp
oop_lab6/: .~lock.6 лаба.odt#  6 лаба.odt  Makefile  README.md  aye.txt  baseshape.cpp  baseshape.h  circle.cpp  circle.h  group.cpp  group.h  laab4.cpp  lab4.pro  lab6  lab6.pro  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  rectangle.cpp  rectangle.h  sadsad  shapefactory.cpp  shapefactory.h  shapestorage.cpp  shapestorage.h  shapewidget.cpp  triangle.cpp  triangle.h
oop_lab7/: 7 лаба.odt  README.md
(+33 files in other folders)
